--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "cli": "npm install -g @vue/cli"
   },
   "dependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
@@ -24,7 +25,6 @@
     "@vue/compiler-sfc": "^3.1.4",
     "babel-eslint": "^10.1.0",
     "babel-plugin-lodash": "^3.3.4",
-    "eslint": "^7.30.0",
     "eslint-plugin-vue": "^7.13.0",
     "lint-staged": "^11.0.1",
     "prettier": "^2.3.2",
